# openclaw

./: .gitignore
openclaw-rs/: Cargo.toml  README.md
openclaw-rs/crates/openclaw-agent/: Cargo.toml
openclaw-rs/crates/openclaw-agent/src/: approval.rs  error.rs  lib.rs  runtime.rs  session.rs  tools.rs
openclaw-rs/crates/openclaw-agent/src/providers/: anthropic.rs  deepseek.rs  mod.rs  moonshot.rs  ollama.rs  openai.rs  openrouter.rs  qwen.rs  zhipu.rs
openclaw-rs/crates/openclaw-agent/src/tools/: archive.rs  ask.rs  automation.rs  browser.rs  canvas.rs  channel_actions.rs  checksum.rs  compare.rs  context.rs  diagnostic.rs  diff.rs  encoding.rs  env.rs  fileops.rs  filesystem.rs  git.rs  http.rs  json.rs  lsp.rs  math.rs  media.rs  memory.rs  messaging.rs  mod.rs  network.rs  notebook.rs  plan.rs  process.rs  skill.rs  string.rs  system.rs  tasks.rs  template.rs  time.rs  util.rs  validate.rs  web.rs
openclaw-rs/crates/openclaw-channels/: Cargo.toml
openclaw-rs/crates/openclaw-channels/src/: attachment.rs  delivery.rs  discord.rs  imessage.rs  lib.rs  line.rs  manager.rs  registry.rs  routing.rs  signal.rs  slack.rs  telegram.rs  traits.rs  web.rs  whatsapp.rs
openclaw-rs/crates/openclaw-cli/: Cargo.toml
openclaw-rs/crates/openclaw-cli/src/: lib.rs  main.rs  onboard.rs  render.rs  repl.rs
openclaw-rs/crates/openclaw-cli/src/commands/: agent.rs  channels.rs  config.rs  doctor.rs  gateway.rs  mod.rs  plugins.rs  secrets.rs
openclaw-rs/crates/openclaw-core/: Cargo.toml
openclaw-rs/crates/openclaw-core/src/: env.rs  error.rs  lib.rs  paths.rs
openclaw-rs/crates/openclaw-core/src/config/: loader.rs  schema.rs
openclaw-rs/crates/openclaw-core/src/types/: agent.rs  audit.rs  auth.rs  channel.rs  message.rs  mod.rs  session.rs  tool.rs
openclaw-rs/crates/openclaw-gateway/: Cargo.toml
openclaw-rs/crates/openclaw-gateway/src/: error.rs  lib.rs  methods.rs  server.rs  session.rs
openclaw-rs/crates/openclaw-gateway/src/handlers/: chat.rs  config.rs  cron.rs  exec.rs  health.rs  mod.rs  wizard.rs
openclaw-rs/crates/openclaw-memory/: Cargo.toml
openclaw-rs/crates/openclaw-memory/src/: lib.rs  store.rs
openclaw-rs/crates/openclaw-plugin-sdk/: Cargo.toml
openclaw-rs/crates/openclaw-plugin-sdk/src/: channel.rs  error.rs  hooks.rs  lib.rs  provider.rs  tool.rs
openclaw-rs/crates/openclaw-providers/: Cargo.toml
openclaw-rs/crates/openclaw-providers/src/: anthropic.rs  lib.rs  openai.rs
openclaw-rs/crates/openclaw-sandbox/: Cargo.toml
openclaw-rs/crates/openclaw-sandbox/src/: executor.rs  lib.rs  profile.rs
openclaw-rs/crates/openclaw-sandbox/src/macos/: mod.rs
openclaw-rs/crates/openclaw-secrets/: Cargo.toml
openclaw-rs/crates/openclaw-secrets/src/: crypto.rs  keychain.rs  lib.rs  store.rs  types.rs
openclaw-rs/examples/hello-plugin/: Cargo.toml
openclaw-rs/examples/hello-plugin/src/: lib.rs
openclaw-rs/rust-spec/: 00-overview.md
openclaw-rs/rust-spec/gateway/: 00-gateway-overview.md
openclaw-rs/rust-spec/plugins/: 00-plugin-sdk.md
openclaw-rs/rust-spec/providers/: 00-providers-overview.md
openclaw-rs/rust-spec/tools/: 00-tools-overview.md
openclaw-rs/tests/integration/: Cargo.toml  lib.rs
openclaw-rs/tests/integration/tests/: cli_routing.rs  config_roundtrip.rs
rust-spec/: 01-architecture.md  02-security.md  03-agent-execution.md  04-messaging.md  05-modules.md  06-data-models.md  07-implementation-notes.md  README.md
