[package]
name = "openclaw-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for OpenClaw"
license = "MIT"

[[bin]]
name = "openclaw"
path = "src/main.rs"

[dependencies]
openclaw-core = { path = "../openclaw-core" }
openclaw-agent = { path = "../openclaw-agent" }
openclaw-gateway = { path = "../openclaw-gateway" }
openclaw-channels = { path = "../openclaw-channels" }
openclaw-providers = { path = "../openclaw-providers", features = ["anthropic", "openai", "google"] }
openclaw-secrets = { path = "../openclaw-secrets" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# CLI framework
clap = { version = "4.4", features = ["derive", "env"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Terminal
console = "0.15"
indicatif = "0.17"
rpassword = "7.3"

# Config
directories = "5.0"

[features]
default = []
